--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -11,6 +11,13 @@
       crossorigin
       type="application/json"
     />
+    <link
+      rel="preload"
+      href="https://api.bbki.ng/posts"
+      as="fetch"
+      crossorigin
+      type="application/json"
+    />
     <link rel="icon" type="image/svg" href="/favicon.svg" />
     <link
       rel="alternate icon"
