feat: add google font

--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -31,10 +31,16 @@
     <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF" />
     <meta name="theme-color" content="#ffffff" />
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body class="h-full m-0 flex flex-col font-mono">
-    <div id="root" class="flex-grow"></div>
+    <div id="root" class="flex-grow noto-serif"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
