--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -40,8 +40,8 @@
   </head>
 
   <body class="h-full m-0 flex flex-col font-mono">
-    <div id="root" class="flex-grow noto-serif"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="blog" class="flex-grow noto-serif"></div>
+    <script type="module" src="/src/index.tsx"></script>
     <script type="module">
       // Import the functions you need from the SDKs you need
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
