--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -4,6 +4,7 @@
     <title>bbki.ng</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="baby king" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <link
       rel="preload"
       href="https://api.bbki.ng/projects"
