--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-full no-scrollbar">
   <head>
     <title>bbki.ng</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name='viewport' content='initial-scale=1, viewport-fit=cover'>
     <meta name="description" content="baby king" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link
