--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -38,6 +38,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/open-heart-element" type="module"></script>
   </head>
 
   <body class="h-full m-0 flex flex-col font-mono">
