--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -4,7 +4,10 @@
     <title>bbki.ng</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="baby king" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <link
       rel="preload"
       href="https://api.bbki.ng/projects"
@@ -26,7 +29,11 @@
       type="image/png"
       sizes="16x16"
     />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+    <link
+      rel="apple-touch-icon"
+      href="/apple-touch-icon.png?v=1.0"
+      sizes="180x180"
+    />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="mask-icon" href="/favicon.svg" color="#FFFFFF" />
