--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -49,7 +49,7 @@
   </head>
 
   <body class="h-full m-0 flex flex-col font-mono">
-    <div id="blog" class="flex-grow noto-serif no-scrollbar"></div>
+    <div id="blog" class="grow noto-serif no-scrollbar"></div>
     <script type="module" src="/src/index.tsx"></script>
     <script type="module">
       // Import the functions you need from the SDKs you need
