--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -46,33 +46,11 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/open-heart-element" type="module"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@bbki.ng/bbimg@latest/dist/index.js"></script>
   </head>
 
   <body class="h-full m-0 flex flex-col font-mono">
     <div id="blog" class="grow noto-serif no-scrollbar"></div>
     <script type="module" src="/src/index.tsx"></script>
-    <script type="module">
-      // Import the functions you need from the SDKs you need
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
-      import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-analytics.js";
-      // TODO: Add SDKs for Firebase products that you want to use
-      // https://firebase.google.com/docs/web/setup#available-libraries
-
-      // Your web app's Firebase configuration
-      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-      const firebaseConfig = {
-        apiKey: "AIzaSyCtVe_ZaoYmiFB3G8-5eMuBdR0T0IPeTYU",
-        authDomain: "bbking-42349.firebaseapp.com",
-        projectId: "bbking-42349",
-        storageBucket: "bbking-42349.appspot.com",
-        messagingSenderId: "627618965416",
-        appId: "1:627618965416:web:4fee41b0f994c021c7df9d",
-        measurementId: "G-YVYDLKY8YY",
-      };
-
-      // Initialize Firebase
-      const app = initializeApp(firebaseConfig);
-      const analytics = getAnalytics(app);
-    </script>
   </body>
 </html>
