--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -46,7 +46,7 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/open-heart-element" type="module"></script>
-    <script type="module" src="https://cdn.jsdelivr.net/npm/@bbki.ng/bbimg@latest/dist/index.js"></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@bbki.ng/bbimg@0.0.3/dist/index.js"></script>
   </head>
 
   <body class="h-full m-0 flex flex-col font-mono">
