--- a/packages/site/index.html
+++ b/packages/site/index.html
@@ -45,6 +45,14 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&display=swap"
       rel="stylesheet"
     />
+    <style>
+      bb-img:not(:defined) {
+        display: block;
+        width: 100%;
+        aspect-ratio: 3/2; /* 与组件默认比例一致 */
+        background: #f5f5f5; /* 与组件默认 placeholder 一致 */
+      }
+    </style>
     <script src="https://unpkg.com/open-heart-element" type="module"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@bbki.ng/bbimg@0.0.3/dist/index.js"></script>
   </head>
